services/dashboard/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
spec:
  ingressClassName: emissary
  rules:
  - host: dashboard.cluster1.joshgav.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
  tls:
  - secretName: dashboard-tls-keypair
